<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/balloon6"
     android:fillViewport="true">

<RelativeLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="artist.web.firstcard.MainActivity">

            <TextView
                    android:id="@+id/HBText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/BasicLayoutStyle.bdayText"
                    android:gravity="center|center_horizontal"
                    android:text="@string/HBText"/>


            <TextView
                android:id="@+id/toText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toText"
                style="@style/BasicLayoutStyle.toText"
                android:layout_below="@id/HBText"/>

            <ImageView
                android:id="@+id/bdayCake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toText"
                android:src="@drawable/bdaycake2"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cakeText"
                android:layout_centerInParent="true"/>


            <TextView
                android:id="@+id/msg1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg1text"
                android:layout_below="@id/bdayCake"
                style="@style/BasicLayoutStyle.msg1Text"/>

            <TextView
                android:id="@+id/msg2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg2Text"
                style="@style/BasicLayoutStyle.msg1Text"
                android:layout_below="@id/msg1Text"/>

              <TextView
                android:id="@+id/fromText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromText"
                android:layout_below="@id/msg2Text"
                style="@style/BasicLayoutStyle.toText.fromtext"/>

           </RelativeLayout>
    </ScrollView>




